--- a/package.json
+++ b/package.json
@@ -1,13 +1,67 @@
 {
   "name": "react-form-model",
   "version": "0.1.0",
-  "description": "react-form-model",
+  "description": "FormModel bindings for React",
   "main": "./src/index.js",
-  "repository": "https://github.com/zarplata/react-form-model.git",
+  "scripts": {
+    "test": "cross-env BABEL_ENV=commonjs NODE_ENV=test mocha --compilers js:babel-register --recursive --require ./test/setup.js",
+    "test:watch": "npm test -- --watch"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zarplata/react-form-model.git"
+  },
+  "keywords": [
+    "react",
+    "reactjs",
+    "form",
+    "model",
+    "form-model"
+  ],
   "author": "Communist <apvnsk@gmail.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/zarplata/react-form-model/issues"
+  },
   "dependencies": {
-    "form-model": "^0.1.0",
     "lodash": "^4.17.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.0",
+    "babel-plugin-check-es2015-constants": "^6.22.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoped-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-plugin-transform-es2015-computed-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-es2015-for-of": "^6.23.0",
+    "babel-plugin-transform-es2015-function-name": "^6.24.1",
+    "babel-plugin-transform-es2015-literals": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-es2015-object-super": "^6.24.1",
+    "babel-plugin-transform-es2015-parameters": "^6.24.1",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-spread": "^6.22.0",
+    "babel-plugin-transform-es2015-sticky-regex": "^6.24.1",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
+    "babel-plugin-transform-es2015-unicode-regex": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "cross-env": "^5.0.5",
+    "eslint": "^4.6.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-react": "^7.3.0",
+    "form-model": "^0.1.0",
+    "jsdom": "^11.2.0",
+    "mocha": "^3.5.3",
+    "react": "^15.6.1"
+  },
+  "peerDependencies": {
+    "form-model": "^0.1.0",
+    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
   }
 }
