--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.0",
     "babel-plugin-check-es2015-constants": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-es2015-block-scoped-functions": "^6.22.0",
@@ -55,13 +56,15 @@
     "eslint": "^4.6.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.3.0",
-    "form-model": "^0.1.0",
+    "expect": "^21.1.0",
+    "form-model": "~0.1.9",
     "jsdom": "^11.2.0",
     "mocha": "^3.5.3",
-    "react": "^15.6.1"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   },
   "peerDependencies": {
-    "form-model": "^0.1.0",
+    "form-model": "~0.1.9",
     "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
   }
 }
